Implemented Heat Effects checkbox and added more translated text

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -95,5 +95,8 @@
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="HeatEffects" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
