--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -39,7 +39,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Flag_GB" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Flag_RU" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
