--- a/Contra.csproj
+++ b/Contra.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -86,7 +86,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="eventargs.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -119,7 +118,6 @@
     <Compile Include="onlinePlayersForm.Designer.cs">
       <DependentUpon>onlinePlayersForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Settings.cs" />
     <Compile Include="TransparentRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
