--- a/Contra.csproj
+++ b/Contra.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -173,6 +173,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ContraIco.ico" />
+    <Content Include="LICENSE.txt" />
+    <Content Include="Version.txt" />
+    <None Include="README.md" />
     <None Include="Resources\refresh2.png" />
     <None Include="Resources\playersOnline.jpg" />
     <None Include="Resources\blackDot.png" />
