Implemented camera height setting

--- a/Contra.csproj
+++ b/Contra.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -123,6 +123,9 @@
     </Compile>
     <Compile Include="TransparentRichTextBox.Designer.cs">
       <DependentUpon>TransparentRichTextBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TransparentTrackBar.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="VPNForm.cs">
       <SubType>Form</SubType>
