--- a/.gitignore
+++ b/.gitignore
@@ -20,14 +20,14 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-#[Rr]elease/
-#[Rr]eleases/
+[Rr]elease/
+[Rr]eleases/
 x64/
 x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-#[Bb]in/
+[Bb]in/
 [Bb]in/[Rr]elease/[Cc]ontra
 [Oo]bj/
 [Ll]og/
