--- a/App.config
+++ b/App.config
@@ -68,7 +68,7 @@
                 <value>655</value>
             </setting>
             <setting name="Res" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="ShowConsole" serializeAs="String">
                 <value>False</value>
@@ -77,7 +77,7 @@
                 <value>False</value>
             </setting>
             <setting name="IP_Label" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="stopDialog1" serializeAs="String">
                 <value>False</value>
@@ -86,10 +86,10 @@
                 <value>False</value>
             </setting>
             <setting name="concatName" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="concatDesc" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="newAdapter" serializeAs="String">
                 <value>True</value>
@@ -105,6 +105,9 @@
             </setting>
             <setting name="HeatEffects" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="WaterEffects" serializeAs="String">
+                <value>True</value>
             </setting>
         </Contra.Properties.Settings>
     </userSettings>
