--- a/Contra.csproj
+++ b/Contra.csproj
@@ -181,22 +181,33 @@
   <ItemGroup>
     <Content Include="ContraIco.ico" />
     <Content Include="LICENSE.txt" />
-    <None Include="Resources\_button_config_s_tr.png" />
-    <None Include="Resources\_button_console_s_tr.png" />
     <None Include="Resources\_button_sm_highlight_s.png" />
-    <None Include="Resources\_button_config_s.png" />
-    <None Include="Resources\_button_console_s.png" />
     <None Include="Resources\background.jpg" />
     <None Include="Resources\donate.png" />
+    <None Include="Resources\vpn_off.png" />
+    <None Include="Resources\vpn_off_over.png" />
+    <None Include="Resources\vpn_on.png" />
+    <None Include="Resources\vpn_on_over.png" />
+    <None Include="Resources\_button_config_s.png" />
+    <None Include="Resources\_button_config_s_tr.png" />
+    <None Include="Resources\trash.png" />
+    <None Include="Resources\trash_tr.png" />
+    <None Include="Resources\trash1.png" />
+    <None Include="Resources\_button_trash_tr.png" />
+    <None Include="Resources\_button_trash1.png" />
+    <None Include="Resources\_button_trash.png" />
+    <None Include="Resources\_button_vpn_highlight.png" />
+    <None Include="Resources\_button_config_highlight.png" />
+    <None Include="Resources\_button_console_highlight.png" />
+    <None Include="Resources\_button_console_s.png" />
+    <None Include="Resources\_button_console_s_tr.png" />
+    <None Include="Resources\_button_donate.png" />
+    <None Include="Resources\_button_donate_tr.png" />
     <Content Include="Version.txt" />
     <None Include="README.md" />
     <None Include="Resources\refresh2.png" />
     <None Include="Resources\playersOnline.jpg" />
     <None Include="Resources\blackDot.png" />
-    <None Include="Resources\vpn_on_over.png" />
-    <None Include="Resources\vpn_on.png" />
-    <None Include="Resources\vpn_off_over.png" />
-    <None Include="Resources\vpn_off.png" />
     <None Include="Resources\flag_de_tr.png" />
     <None Include="Resources\flag_de.png" />
     <None Include="Resources\vpnbg.jpg" />
