--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  PUBLISH_PATH: netcore/bin/Debug/netcoreapp3.1/win-x64/publish
+  PUBLISH_PATH: netcore/bin/Release/netcoreapp3.1/win-x64/publish
 
 on: 
   push:
@@ -25,11 +25,14 @@ jobs:
         with:
           dotnet-version: 3.1.100
 
-      - name: Build
-        run: dotnet publish -r win-x64 --self-contained=false /p:PublishTrimmed=false netcore
+      # Debug build
+      #   run: dotnet publish -r win-x64 --self-contained=false /p:PublishTrimmed=false netcore
+
+      - name: Build & Publish
+        run: dotnet publish -r win-x64 --configuration Release netcore
 
       - name: Upload Artifact
         uses: actions/upload-artifact@master
         with:
           name: contra-launcher
-          path: ${{ env.PUBLISH_PATH }}
+          path: ${{ env.PUBLISH_PATH }}/Contra_Launcher.exe
