--- a/net45/App.config
+++ b/net45/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <Contra.Properties.Settings>
             <setting name="LangEN" serializeAs="String">
-              <value>True</value>
+                <value>True</value>
             </setting>
             <setting name="LangRU" serializeAs="String">
                 <value>False</value>
@@ -78,6 +78,18 @@
             </setting>
             <setting name="WaterEffects" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="LeikezeHotkeys" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LegacyHotkeys" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Shadows3D" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisableDynamicLOD" serializeAs="String">
+                <value>False</value>
             </setting>
         </Contra.Properties.Settings>
     </userSettings>
