Hotfix for custom options not saving after pressing Launch button.

--- a/netcore/netcore.csproj
+++ b/netcore/netcore.csproj
@@ -9,6 +9,7 @@
     <ApplicationIcon>..\net45\ContraIco.ico</ApplicationIcon>
     <ApplicationManifest>..\net45\app.manifest</ApplicationManifest>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+	<GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <PublishReadyToRun>false</PublishReadyToRun>
     <PublishSingleFile>true</PublishSingleFile>
