--- a/net45/App.config
+++ b/net45/App.config
@@ -41,7 +41,7 @@
                 <value>False</value>
             </setting>
             <setting name="Fog" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="FirstRun" serializeAs="String">
                 <value>True</value>
@@ -62,10 +62,10 @@
                 <value>True</value>
             </setting>
             <setting name="Res" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="IP_Label" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Flag_DE" serializeAs="String">
                 <value>False</value>
@@ -90,6 +90,30 @@
             </setting>
             <setting name="DisableDynamicLOD" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ParticleCap" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Anisotropic" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ControlBarPro" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ControlBarContra" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CameosDouble" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CameosStandard" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ControlBarStandard" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ExtraBuildingProps" serializeAs="String">
+                <value>True</value>
             </setting>
         </Contra.Properties.Settings>
     </userSettings>
