--- a/net45/App.config
+++ b/net45/App.config
@@ -17,10 +17,10 @@
                 <value>False</value>
             </setting>
             <setting name="MusicNew" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="MusicStandard" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="VoNew" serializeAs="String">
                 <value>False</value>
@@ -114,6 +114,9 @@
             </setting>
             <setting name="ExtraBuildingProps" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="MusicTheScore" serializeAs="String">
+                <value>False</value>
             </setting>
         </Contra.Properties.Settings>
     </userSettings>
